GNOME Bugzilla – Bug 731150
MSN live connection not removed from mission-control
Last modified: 2014-06-11 13:04:48 UTC
Hello, Goa has removed MSN live chat support, but the mission-control connection is still present. The removal from the switch in g-c-c makes it impossible for the user to disable the account. But the biggest problem IMHO is that goa is recreating the mission control account even if it gets deleted with the mc-tool command or in empathy-accounts
Can you see this recreated account in Settings -> Online Accounts ?
The MSN account is still present in Settings -> Online Accounts. But there is only the Mail and document switches, not the one related to IM
Created attachment 277796 [details] [review] goa-mc-plugin: Remove Windows Live chat using Jabber
... and reassigning to empathy.
Shouldn't goa also remove any existing MC connection on upgrade?
(In reply to comment #5) > Shouldn't goa also remove any existing MC connection on upgrade? No, because GOA does not create any connections.
OK, tested the patch and it WORKSFORME But now when restarting goa, I'm seeing an other problem. So I patched empathy, restarted goa (with the --replace flag) and goa is invalidating all the accounts. Restarting again and all the accounts are back in g-c-c. Apparently as soon as you have one disparity, all the accounts get invalidated by goa. I'll open a new bug for this I guess?
Review of attachment 277796 [details] [review]: ++ please merge to master.
Regarding comment #7, I've open this new bug https://bugzilla.gnome.org/show_bug.cgi?id=731162
Merged; will be in 3.12.3