goa-mc-plugin: Remove Windows Live chat using Jabber

Microsoft has been planning to drop Windows Live Messenger in favour of
Skype for quite some time now. The XMPP gateway that we used does not
work anymore. However, you can continue using the proprietary MSN
protocol.

https://bugzilla.gnome.org/show_bug.cgi?id=731150